<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.cartescanner.ui.HomeFragment"
        android:label="@string/nav_home" />

    <fragment
        android:id="@+id/nav_list"
        android:name="com.example.cartescanner.ui.ListFragment"
        android:label="@string/nav_list" />

    <fragment
        android:id="@+id/nav_queue"
        android:name="com.example.cartescanner.ui.QueueFragment"
        android:label="@string/nav_queue" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.cartescanner.ui.SettingsFragment"
        android:label="@string/nav_settings" />

</navigation>