<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/nav_home" />

        <item
            android:id="@+id/nav_list"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/nav_list" />

        <item
            android:id="@+id/nav_queue"
            android:icon="@android:drawable/ic_popup_sync"
            android:title="@string/nav_queue" />
    </group>

    <!-- Catégorie paramètres -->
    <item android:title="@string/nav_settings">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@android:drawable/ic_menu_preferences"
                android:title="@string/nav_settings" />
        </menu>
    </item>

</menu>